--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    GITHUB_REPOS_BASE_URL: https://api.github.com/search/repositories
 
 services:
     # default configuration for services in *this* file
